# StalkerModLauncher

./: .gitignore  .gitlab-ci.yml  README.md  StalkerModLauncher.sln  THIRD_PARTY_NOTICES.md
assets/: README.md
docs/: AP_PRO_TOPIC_RU.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_SMOKE_TEST_EN.md  RELEASE_SMOKE_TEST_RU.md  TECHNICAL.md  TECHNICAL_EN.md  TECHNICAL_RU.md  USER_GUIDE_RU.md  USVFS_RESEARCH.md  USVFS_RESEARCH_EN.md  USVFS_RESEARCH_RU.md  example-settings.json
native/StalkerModLauncher.UsvfsX86Host/: CMakeLists.txt  main.cpp
research/usvfs-managed-poc/: Program.cs  README.md  StalkerUsvfsManagedPoc.csproj
research/usvfs-poc/: CMakeLists.txt  README.md  child.cpp  host.cpp  launcher.cpp
scripts/: Build-Release.ps1  Build-VfsExperimental.ps1  Verify-Release.ps1
src/StalkerModLauncher/: App.xaml  App.xaml.cs  StalkerModLauncher.csproj  app.manifest
tests/StalkerModLauncher.Tests/: ApProCatalogParserTests.cs  AppSettingsNormalizerTests.cs  ApplicationLogServiceTests.cs  CollectionReordererTests.cs  DebouncedAsyncActionTests.cs  FileLayerPlanTests.cs  FileSystemSafetyTests.cs  GameExitDiagnosticsServiceTests.cs  GameSessionTrackerTests.cs  LaunchCoordinatorTests.cs  LaunchExecutableDetectorTests.cs  LaunchPreflightServiceTests.cs  LauncherUpdateServiceTests.cs  LinkedWorkspaceLaunchBackendTests.cs  MainViewModelTests.cs  Mo2ModListImporterTests.cs  ModConflictAnalyzerTests.cs  ModListEditorTests.cs  ModScanSelectionRequestTests.cs  ModScannerServiceTests.cs  OverlayDiagnosticsServiceTests.cs  OverlayManifestBuilderTests.cs  ProfileCreationViewModelTests.cs  ProfileDataPathResolverTests.cs  ProfileHealthServiceTests.cs  ProfileLauncherTests.cs  ProfileManagerTests.cs  ProfileNotesStoreTests.cs  ProfileReadinessServiceTests.cs  ProfileSettingsValidatorTests.cs  ProfileSettingsViewModelTests.cs  ProfileTransferServiceTests.cs  ProfileVirtualFileDiagnosticsServiceTests.cs  ScreenshotScannerServiceTests.cs  SettingsStoreTests.cs  SingleInstanceGuardTests.cs  StalkerModLauncher.Tests.csproj  UiSoundResourcesTests.cs  UsvfsLaunchBackendTests.cs  (+9 more)
(+184 files in other folders)
